--- a/app/scss/_dataset-list.scss
+++ b/app/scss/_dataset-list.scss
@@ -2,12 +2,7 @@
   display: flex;
   flex-direction: column;
   z-index: 110;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 250px;
-  background-color: #fff;
+  height: 100%;
 
   #dataset-list-header {
     height: 50px;
@@ -17,7 +12,6 @@
     display: flex;
     flex-direction: column;
     padding: 12px 10px;
-    margin: 0 -5px;
 
     #dataset-list-buttons {
       width: 100%;
@@ -44,7 +38,6 @@
         border: 1px solid #e1e4e8;
         border-radius: 3px;
         padding: 2px 5px;
-        margin: 0 5px;
 
         &:focus {
           outline: none;
@@ -63,6 +56,7 @@
 
   #list {
     flex: 1;
+    border-top: $list-item-bottom-border;
     border-bottom: $list-item-bottom-border;
   }
 
