--- a/app/scss/mixins/_buttons.scss
+++ b/app/scss/mixins/_buttons.scss
@@ -4,7 +4,7 @@
 // and disabled options for all buttons
 
 @mixin button-variant($color, $background, $border) {
-  $active-background: darken($background, 10%);
+  $active-background: lighten($background, 6%);
   $active-border: darken($border, 12%);
 
   color: $color;
