feat(LindDiff): initial line diff component & storybook story

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -33,6 +33,7 @@
 @import "body";
 @import "metadata";
 @import "readme";
+@import "lineDiff";
 @import "stats";
 
 @import '~easymde/dist/easymde.min.css';
