--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -34,6 +34,7 @@
 @import "metadata";
 @import "readme";
 @import "lineDiff";
+@import "tableDiff";
 @import "stats";
 
 @import '~easymde/dist/easymde.min.css';
