wip: add no changes content for display after commit

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -545,3 +545,12 @@ $header-font-size: .9rem;
   top: -2px;
   font-weight: 700;
 }
+
+// presentation-panel
+.presentation-panel {
+  padding: 10px 10px;
+
+  h3 {
+    font-weight: 600;
+  }
+}
