style(spinner-button): adjust heights

--- a/app/scss/_chrome.scss
+++ b/app/scss/_chrome.scss
@@ -176,8 +176,8 @@
 
 .spinner-button {
   width: 60px;
-  height: 30px;
-  padding-bottom: 5px;
+  height: 23px;
+  padding-top: 4px;
   text-align: center;
   font-size: 10px;
   display: inline-block;
