--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -5,7 +5,9 @@
 //
 
 .btn {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: $btn-font-weight;
   text-align: center;
   white-space: nowrap;
