refactor(status, UnlinkedDataset): change wording to 'checkout'
Added more explanation to the `UnlinkedDataset` section, not married to any verbage to happy to change as needed.

When the dataset is not checked out, we have all the components listed, but disabled.

--- a/app/scss/_sidebar-layout.scss
+++ b/app/scss/_sidebar-layout.scss
@@ -132,6 +132,9 @@
   }
 
   .status-column {
+    &.disabled {
+      display: none;
+    }
     text-align: center;
     width: 30px;
   }
@@ -146,7 +149,12 @@
   }
 
   &.disabled {
+    cursor: default;
     color: #ccc;
+
+    &:hover {
+      border-left: 2px solid transparent;
+    }
 
     .icon-column {
       color: #ccc;
