--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -455,10 +455,14 @@ $header-font-size: .9rem;
   height: 100%;
   background: $appBackground;
   border-right: 1px solid $border-color;
-  -webkit-transition-duration: 0.3s;
-  -moz-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  // -webkit-transition-duration: 0.3s;
+  // -moz-transition-duration: 0.3s;
+  // -o-transition-duration: 0.3s;
+  // transition-duration: 0.3s;
+  transition: left 0.3s;
+  &:active {
+    transition: left 0.3s, opacity 0.3s 0.3s;
+  }
 }
 
 .details-bar-inner {
