fix(App, Dataset): event listener leak
The `ipcRenderer.on()` functions that we use to hook into the electron menu are event listeners. We haven't been handling the removal of these listeners in the `App` and `Dataset` components. For each listener we add in `componentDidMount` we need to remove it in `componentDidUnmount`.

This commit also fixes some styling on the Dataset component when a dataset is not `checkedout`

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -414,13 +414,15 @@ $header-font-size: .9rem;
 
 .unlinked-dataset {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   .message-container {
     display: flex;
     flex-direction: row;
-    padding: 19px;
+    padding: $spacer * 2;
     max-width: 475px;
-    margin: 150px auto;
     border-radius: 5px;
   }
 }
