fix(*): hashHistory & add/adjust id's for e2e tests
Adding and consolidating id tags that we will need for the e2e tests.
Also fixes a bug that was using not using hash history when in production mode. This was not allowing us to redirect programatically.

--- a/app/scss/commit.scss
+++ b/app/scss/commit.scss
@@ -28,7 +28,7 @@ $sidebar-item-padding:  6px 10px;
 }
 
 // display commit sidebar item on the bottom of the list
-#commit_status {
+#commit-status {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -36,14 +36,14 @@ $sidebar-item-padding:  6px 10px;
 }
 
 #commit-details-sidebar {
-  #commit_status {
+  #commit-status {
     position: initial;
     background-color: inherit;
   }
 }
 
 .clear-to-commit {
-  #commit_status {
+  #commit-status {
     background-color: $light-blue-accent;
 
     &.sidebar-list-item-text.selected {
