feat(icon): `Icon` component The `Icon` component should encompess all the necessary icons for the app. We are wrapping the FontAwesomeIcon component. However, some icons we need are not part of the free set of FontAwesomeIcons, so, for now, those icons contains the `faQuestionCircle` icon, and will be replaced with svgs asap. The icons that do not have equivalents, or otherwise need replacing, are: boolean, object, array, integer, number, string, null, commit

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -38,4 +38,6 @@
 @import "sidebar-layout";
 
 @import '~easymde/dist/easymde.min.css';
-@import "dialog"
+@import "dialog";
+
+@import "4.0/icons";
