feat(components): add components that build to create TypePicker
added components:
- overlay/Overlay: used as a pop over, will call `onCancel` if you click outside fo the div, or click the 'x'. The `navigation` prop is optional. Any `children` will overflow-y scroll.
- item/DataType.tsx: defines the `DataTypes` type. Wraps the type name, description, and icon. `type` and `description`, are defined and passed down. May want to refactor to keep description and type defined here, and just use the type to determine all content.
- nav/TabPicker: has size options 'sm' and 'md', and color options 'light' and 'dark'
- overlay/TypePickerOverlay: a version of `Overlay` that lists the DataTypes and passes through the `navigation` component. `typesAndDescriptions` are defined here.
- structure/ColumnType: the component used to show the column type with its icon. Is not 'clickable' if there is no 'onClick' func passed down. I a column has more than one type, it will indicate 'multi'
- structure/TypePicker: takes all these components and creates a TypePicker. Click on the columnType to get a TypePickerOverlay popup. Choose between single or multi mode. The chosen type is kept in the hidden input named for the column (`${column-name}-type`)

This commit also created scss files based on the folder structure:
- chrome
- item
- nav
- overlay
- structure
- type

It also adds a story for each component under the `structure` tab

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -40,4 +40,10 @@
 @import '~easymde/dist/easymde.min.css';
 @import "dialog";
 
-@import "4.0/icons";
+@import "0.4.0/icons";
+@import "0.4.0/chrome";
+@import "0.4.0/type";
+@import "0.4.0/nav";
+@import "0.4.0/item";
+@import "0.4.0/overlay";
+@import "0.4.0/structure";
