feat(SchemaItem): row that contains editable schema info
- adjusts ColumnType, TypePicker, and DynamicEditField to have `expanded` view
- adds up, down, left, right carets to `Icon`
- creates `SchemaItem` that expands and retracts
- known bug, DynamicEditField doesn't expand fully at first when you expand SchemaItem

--- a/app/scss/0.4.0/form.scss
+++ b/app/scss/0.4.0/form.scss
@@ -3,6 +3,13 @@
   background: #fff;
   padding: 5px;
   border-radius: 3px;
+  text-overflow: ellipsis;
+
+  font-family: 'Avenir Next';
+  font-size: 14px;
+  font-weight: 300;
+
+  resize: none;
 
   &:focus {
     border-color: #D8DFE6;
