--- a/app/scss/0.4.0/structure.scss
+++ b/app/scss/0.4.0/structure.scss
@@ -58,6 +58,7 @@
 
 .schema-wrap {
   width: 100%;
+  max-width: 800px;
   
   .schema-header {
     display: flex;
@@ -73,12 +74,13 @@
     padding: 10px;
     border: solid 1px #E8E9ED;
     border-bottom: none;
-  
+
     div:first-child {
-      margin-left: 40px;
+      margin-left: 80px;
     }
+  
     div:last-child {
-      margin-right: 20px;
+      margin-right: 30px;
     }
   }
 }
