--- a/app/scss/0.4.0/structure.scss
+++ b/app/scss/0.4.0/structure.scss
@@ -14,12 +14,23 @@
   padding: 5px;
   width: 100px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   border: solid 1px #fff;
   border-radius: 3px;
   transition: 200ms;
+
+  div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .multi {
+    padding-bottom: 3px;
+  }
 
   span {
     margin-right: 5px;
@@ -43,4 +54,33 @@
   border: solid 1px #D8DFE6;
   border-radius: 3px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1)
+}
+
+.schema-wrap {
+  width: 100%;
+  max-width: 800px;
+  
+  .schema-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Rubik';
+    font-size: 10px;
+    font-weight: 500;
+    color: #4D4D4D;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    padding: 10px;
+    border: solid 1px #E8E9ED;
+    border-bottom: none;
+
+    div:first-child {
+      margin-left: 80px;
+    }
+  
+    div:last-child {
+      margin-right: 30px;
+    }
+  }
 }
