refactor(Dataset): move fetching into Dataset and remove Containers
- refactor props to `Dataset`,` DatasetSidebar`, `CommitDetails` to move to `data` paradigm
- remove `DatasetSidebarContainer`, `CommitDetailsContainer`
- add fetching to `Dataset`  in `ComponentWillMount` and `ComponentDidMount` funcs, and remove fetching from `App` and `bootstrap`
- adjust `Commit` fetching functions to clear the `CommitDetails` if there is no commit selected
- add `setCommit` function that wraps `setSelectedListItem`
- remove fetching from `fsiWrite`, it's unnecessary
 - change `isLoading` in `CommitDetails` `initialState` to false, otherwise the fetching doesn't go correctly
- remove `commit` from localStorage, going to slowly remove these as it comes up
- added e2e test for testing fetching

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -360,6 +360,7 @@ $header-font-size: .9rem;
   }
 
   .commit-details-header {
+    height: 50px;
     padding: $sidebar-item-padding;
     border-bottom: $list-item-bottom-border;
 
