--- a/app/scss/_body.scss
+++ b/app/scss/_body.scss
@@ -42,6 +42,11 @@
 // body table
 
 #body-table-container {
+  height: 100%;
+  overflow-y: scroll;
+  width: 100%;
+  background: #ffffff;
+
   th:hover:not(.highlighted) {
     background: #dcdcdc;
   }
