--- a/app/scss/0.4.0/chrome.scss
+++ b/app/scss/0.4.0/chrome.scss
@@ -64,3 +64,82 @@
     transform: translateX(calc(100% + 2px));
   }
 }
+
+.segment {
+  margin: 10px auto;
+  background: #FFF;
+  border-radius: 3px;
+  border: 1px solid #D8DFE6;
+
+  &.segment-expanded {
+    border-radius: 0px;
+    margin: 0;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    border: none;
+  }
+
+  .caret {
+    margin-right: 15px;
+    cursor: pointer;
+    width: 12px;
+  }
+
+  .content {
+    padding: 0;
+    overflow-y: auto;
+    transition: max-height 0.3s ease-in-out;
+  }
+
+  header {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 8px 10px;
+    border-bottom: 1px solid #E8EDF2;
+    min-height: 40px;
+  
+    &.content-closed {
+      transition: 'border-bottom 0.0 ease-in-out 0.3s';
+      border-bottom: none;
+    }
+    
+    .right-side {
+      margin-left: auto;
+    }
+
+    .expand {
+      cursor: pointer;
+    }
+
+    .left-side {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      .segment-icon {
+        margin-right: 10px;
+      }
+      .text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      .name {
+        font-family: $font-family-sans-serif;
+        font-weight: 500;
+        margin: 0;
+        font-size: 16px;
+        line-height: 19px;
+      }
+      .subhead {
+        font-family: $font-family-sans-serif;
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 14px;
+      }
+    }
+  }
+}
