refactor(LabeledStats): moved into `items` and added sm/lg, dark/light

--- a/app/scss/0.4.0/item.scss
+++ b/app/scss/0.4.0/item.scss
@@ -40,3 +40,41 @@
     border-top: solid 1px #E8E9ED;
   }
 }
+
+.stats-values {
+  display: flex;
+  flex-wrap: wrap;
+
+  .stats-value {
+    margin: 5px 15px;
+
+    .label {
+      font-family: $font-family-sans-serif;
+      font-size: 12px;
+      font-weight: 300;
+      margin-bottom: 0px;
+      text-transform: uppercase;
+      color: #808080;
+      &.light {
+        color: white;
+      }
+      &.large {
+        font-size: 14px;
+        margin-bottom: 3px;
+      }
+    }
+
+    .value {
+      font-family: $font-family-sans-serif;
+      margin-bottom: 0;
+      font-size: 14px;
+      font-weight: 600;
+      &.light {
+        color: white;
+      }
+      &.large {
+        font-size: 24px;
+      }
+    }
+  }
+}
