feat(Tag): tag component, `category`/`keyword` options

--- a/app/scss/0.4.0/item.scss
+++ b/app/scss/0.4.0/item.scss
@@ -78,3 +78,55 @@
     }
   }
 }
+
+.tag {
+  font-size: 14px;
+  color: #AFD148;
+  padding: 3px 5px;
+  letter-spacing: .5px;
+
+  &.category {
+    color: #F8AB31;
+    background: #F2F2F2;
+    border-radius: 2px; 
+  }
+}
+
+
+.dataset-item {
+  padding: 20px;
+  background: white;
+  border-radius: 5px;
+  border: 1px solid #E8EDF2;
+  max-width: 600px;
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    a {
+      font-family: $font-family-sans-serif;
+      text-overflow: ellipsis;
+      font-size: 24px;
+      font-weight: 500;
+      flex: 1 1 auto;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+    div {
+      flex: 0 0 auto;
+    }
+  }
+
+  .title {
+    color: #595959;
+    margin: 10px 0px;
+    font-size: 19px;
+    text-overflow: ellipsis;
+  }
+
+  .detail {
+    margin-right: 10px;
+    width: 100%;
+  }
+}
