--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -526,26 +526,28 @@ input#path, input#bodyPath {
 }
 
 // MultiTextInput (tags UI)
-.tag {
-  background: #e4e4e4;
-  border-radius: 4px;
-  padding: 4px 8px;
-  margin: 5px;
-  display: inline-block;
+.multi-text-input {
+  .tag {
+    background: #e4e4e4;
+    border-radius: 4px;
+    padding: 4px 8px;
+    margin: 5px;
+    display: inline-block;
 
-  .tag-text {
-    flex: 1;
+    .tag-text {
+      flex: 1;
+    }
+
+    .tag-remove {
+      flex: 0;
+      padding-left: 7px;
+    }
   }
 
-  .tag-remove {
-    flex: 0;
-    padding-left: 7px;
+  .tag-input {
+    max-width: 180px;
+    display: inline-block;
   }
-}
-
-.tag-input {
-  max-width: 180px;
-  display: inline-block;
 }
 
 // MultiStructuredInput
