refactor(item/Dataset): adjust styling and add Tag component

--- a/app/scss/0.4.0/dataset.scss
+++ b/app/scss/0.4.0/dataset.scss
@@ -15,9 +15,13 @@
 
   &.small {
     font-size: 11px;
+    
+    .dataset-details-item {
+      margin-right: 10px;
+    }
   }
 
   .dataset-details-item {
-    margin-right: 10px;
+    margin-right: 24px;
   }
 }
