--- a/app/scss/0.4.0/dataset.scss
+++ b/app/scss/0.4.0/dataset.scss
@@ -25,3 +25,12 @@
     margin-right: 24px;
   }
 }
+
+.title-bar {
+  display: flex;
+  justify-content: space-between;
+
+  .left {
+    flex: 0 0 
+  }
+}
