--- a/app/scss/0.4.0/icons.scss
+++ b/app/scss/0.4.0/icons.scss
@@ -1,11 +1,14 @@
 .icon-dark {
+  transition: color .2s ease-out;
   color: #000000;
 }
 
 .icon-medium {
+  transition: color .2s ease-out;
   color: #B3B3B3;
 }
 
 .icon-light {
+  transition: color .2s ease-out;
   color: #ffffff;
 }
