feat(TitleBar): ActionButton, ActionButtonBar, used to make responsive title bar
- if there is a long title, truncate and show and ellipsis. If the title is long, and you click it, it expands to show the full title
- Action buttons in the ActionBar look at the width of the div, if they are too large to fit in the width, they collapse to the hamburger.

--- a/app/scss/0.4.0/chrome.scss
+++ b/app/scss/0.4.0/chrome.scss
@@ -150,6 +150,9 @@
   font-weight: 300;
   display: flex;
   align-items: center;
+  cursor: pointer;
+  padding: 10px;
+  white-space: nowrap;
 
   .text {
     margin-left: 10px;
@@ -189,6 +192,20 @@
           pointer-events: none;
         }
       }
+    }
+  }
+}
+
+.action-button-bar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  > div {
+    display: inline-block;
+
+    &.closed {
+      display: none;
     }
   }
 }
