--- a/app/scss/0.4.0/overlay.scss
+++ b/app/scss/0.4.0/overlay.scss
@@ -5,13 +5,9 @@
   flex-direction: column;
   box-shadow: 0px 0px 6px rgba(0,0,0,0.20);
   background: #fff;
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s, opacity 0.3s ease-in-out;
 
-  &.visible {
-    visibility: visible;
-    opacity: 1;
+  &.closed {
+    display: none;
   }
 
   .title-bar {
